IE11 Fixes
- Fixes pasting in IE11
- Fixes scrollbar showing in IE11

--- a/css/xterm.css
+++ b/css/xterm.css
@@ -34,6 +34,7 @@
 html, body { 
     overflow: hidden;
     overflow: -moz-scrollbars-none;
+    -ms-overflow-style: none;
     background-color: #000;
 }
 
